Update 13 settembre: - Fixed bugs indicators in MainPageExec.js - Fixed modal color background in Style.css - Fixed component ID in Main.html and removed some whitespace
Former-commit-id: 2d882e098b6b24b969fe0641446e1cc0d036a908

--- a/static/CSS/Style.css
+++ b/static/CSS/Style.css
@@ -6,3 +6,7 @@ body {
 .progress {
     background-color: rgba(0, 0, 0, 0.30);
 }
+
+.modal-content {
+    background-color: rgb(255, 238, 139);
+}
